--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -18,7 +18,7 @@
     <!--/ bradcam_area  -->
 
     <!--================Blog Area =================-->
-    <section class="blog_area single-post-area section-padding">
+    <section   class="blog_area single-post-area section-padding " >
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 posts-list">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="navigation-top" id="#comment">
+                    <div class="navigation-top" >
                         <div class="d-sm-flex justify-content-between text-center">
                             <p class="like-info"><span class="align-middle"><i class="fa fa-heart"></i>
                             </span> {% trans 'Lily and 4 people like this' %}</p>
@@ -54,7 +54,7 @@
 
                             </ul>
                         </div>
-                        <div class="navigation-area">
+                        <div id="#comment"  class="navigation-area">
                             <div class="row">
                                 <div
                                         class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
@@ -97,12 +97,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments-area pt-5">
+                    <div   class="comments-area pt-5">
                         <h4 ></h4>
                         <div class="comment-list">
                             <div class="single-comment justify-content-between d-flex">
                                 <div class="user justify-content-between d-flex">
-                                    <div class="desc">
+                                    <div class="desc"#comment>
                                         {% for comment in object.get_comments %}
                                             <p class="comment">
                                                 {{ comment.comment }}
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comment-form" id="#comment">
+                    <div class="comment-form" id="comment">
                         <h4>{% trans 'Leave a Reply' %}</h4>
                         <form method="POST" action="{% url 'posts:comment' pk=object.pk %}" >
                             {% csrf_token %}
