--- a/templates/orders.html
+++ b/templates/orders.html
@@ -5,6 +5,16 @@
 {% block content %}
     <div class="destination_details_info">
         <div class="container">
+            {% if messages %}
+
+                <div class="alert alert-success" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                </div>
+            {% endif %}
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-9">
                     <div class="contact_join">
